// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiReporter Constructor Creates a MultiReporter 1`] = `
MultiReporter {
  "context": Context {
    "globalTags": Object {},
  },
  "reporters": Array [
    StatsDReporter {
      "client": Client {
        "ephemeral_socket": null,
        "global_tags": undefined,
        "host": "localhost",
        "last_used_timer": null,
        "port": 9125,
        "socket": null,
      },
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
    },
    InMemoryReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
      "reports": Array [],
    },
    ConsoleReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
      "output": [Function],
      "silent": false,
    },
  ],
}
`;

exports[`MultiReporter Constructor Creates a MultiReporter with global tags 1`] = `
MultiReporter {
  "context": Context {
    "globalTags": Object {
      "globalTag1": "global_one",
      "globalTag2": "global_two",
    },
  },
  "reporters": Array [
    StatsDReporter {
      "client": Client {
        "ephemeral_socket": null,
        "global_tags": undefined,
        "host": "localhost",
        "last_used_timer": null,
        "port": 9125,
        "socket": null,
      },
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
    },
    InMemoryReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
      "reports": Array [],
    },
    ConsoleReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": [Function],
      "output": [Function],
      "silent": false,
    },
  ],
}
`;

exports[`MultiReporter decrement Reports a counter metric 1`] = `
Array [
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter decrement Reports a counter metric with a sample rate 1`] = `
Array [
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter decrement Reports a counter metric with tags 1`] = `
Array [
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter decrementBy Reports a counter metric 1`] = `
Array [
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {},
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter decrementBy Reports a counter metric with tags 1`] = `
Array [
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter gauge Reports a gauge metric 1`] = `
Array [
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter gauge Reports a gauge metric with a sample rate 1`] = `
Array [
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter gauge Reports a gauge metric with tags 1`] = `
Array [
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter histogram Reports a histogram metric 1`] = `
Array [
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter histogram Reports a histogram metric with a sample rate 1`] = `
Array [
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter histogram Reports a histogram metric with tags 1`] = `
Array [
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter increment Reports a counter metric 1`] = `
Array [
  Array [
    Array [
      "increment_test",
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_test",
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_test",
      undefined,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter increment Reports a counter metric with a sample rate 1`] = `
Array [
  Array [
    Array [
      "increment_test",
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_test",
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_test",
      0.5,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter increment Reports a counter metric with tags 1`] = `
Array [
  Array [
    Array [
      "increment_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_test",
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter incrementBy Reports a counter metric 1`] = `
Array [
  Array [
    Array [
      "increment_by_test",
      10,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {},
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter incrementBy Reports a counter metric with tags 1`] = `
Array [
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter timing Reports a timing metric 1`] = `
Array [
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {},
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter timing Reports a timing metric with a sample rate 1`] = `
Array [
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {},
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {},
    ],
  ],
]
`;

exports[`MultiReporter timing Reports a timing metric with tags 1`] = `
Array [
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      undefined,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;
